@@ -972,3 +972,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          (Sergio).
 20150225 pzx_read.c,szx.c,tzx_read.c,warajevo_read.c: avoid (undefined) reliance
          on pointer overflow in buffer length checks (Stuart).
+20150302 internals.h,pzx_read.c,szx.c,test/test.c,zxs.c: add and use ARRAY_SIZE
+         macro (Stuart).
